[Driver] Don't suggest using the "major version" for -swift-version (#21169)

This was a nice feature when people said "-swift-version 3.1"...
up until we got "-swift-version 4.2" as an actual valid version.
Just drop the special case.

https://bugs.swift.org/browse/SR-8850
(cherry picked from commit 00ed3e118575d9c33806f6a2085125d9b5239a70)